<resources>
    <string name="app_name">RoachVsSlippers</string>
    <string name="game_over">Game Over!😭</string>
    <string name="new_game">New Game</string>
    <string name="menu">Menu</string>
    <string name="start_button_mode">Start Button Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_sensor_mode">Start Sensor Mode</string>
    <string name="top_ten">Top Ten</string>
    <string name="score">Score</string>
    <string name="player_name">Player Name</string>
    <string name="rank_text">(1)</string>
    <string name="coinsText">Coins: 0</string>
</resources>